<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_shape"
        android:layout_margin="16dp"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/day_text_view"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temp_text_view"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/degree"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/degree"
            android:textSize="12sp"
            android:text="@string/o"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/temp_text_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressure_text_view"
            android:text="@string/pressure"
            android:textSize="@dimen/text_size"
            android:textColor="@color/light_blue_800"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/day_text_view"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressure_text_value"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/pressure_text_view"
            app:layout_constraintStart_toStartOf="@id/pressure_text_view"
            app:layout_constraintEnd_toEndOf="@id/pressure_text_view"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidity_text_view"
            android:text="@string/humidity"
            android:textSize="@dimen/text_size"
            android:textColor="@color/light_blue_800"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/day_text_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidity_text_value"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/humidity_text_view"
            app:layout_constraintStart_toStartOf="@id/humidity_text_view"
            app:layout_constraintEnd_toEndOf="@id/humidity_text_view"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wind_text_view"
            android:text="@string/wind_speed"
            android:textSize="@dimen/text_size"
            android:textColor="@color/light_blue_800"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/pressure_text_value"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wind_text_value"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/wind_text_view"
            app:layout_constraintStart_toStartOf="@id/wind_text_view"
            app:layout_constraintEnd_toEndOf="@id/wind_text_view"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/km"
            android:textSize="12sp"
            android:text="@string/km_h"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/wind_text_value"
            app:layout_constraintStart_toEndOf="@id/wind_text_value"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_text_view"
            android:text="@string/description"
            android:textSize="@dimen/text_size"
            android:textColor="@color/light_blue_800"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/pressure_text_value"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_text_value"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/light_blue_800"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/desc_text_view"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>